--- a/public/styles.css
+++ b/public/styles.css
@@ -14,10 +14,17 @@
 }
 .one-message {
 	border: 1px solid #ccc;
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
 	font-size: 1.3rem;
 	padding: 3px;
 	width: 100%;
 	margin-top: 3px;
+}
+.time-stamp{
+	color: #777;
+	font-size: 1rem;
 }
 .message-container {
 	padding-bottom: 3px;
